--- a/ICloudDrive.plist
+++ b/ICloudDrive.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://download.xdrive.top/download/ICloudDrive.ipa</string>
+					<string>https://raw.githubusercontent.com/mixlinker/xdrive/master/ICloudDrive.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
@@ -19,7 +19,7 @@
 				<key>bundle-identifier</key>
 				<string>com.mixlinker.yuejia1</string>
 				<key>bundle-version</key>
-				<string>1.0</string>
+				<string>1.0.5</string>
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
